[package]
name = "apiformes-bm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apiformes = {path="../apiformes", features = ["debug"]}
bytes = "1"
tokio = {version = "1", features=["full"]}
rand = {version = "0.8", features=["small_rng"]}
clap = {version = "2.34", features = ["yaml", "suggestions", "color"]}
futures="0.3"