[package]
name = "apiformes-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apiformes = {path="../apiformes", features = ["debug", "server_async"]}
tokio = {version = "1", features=["full"]}
tracing="0.1"
tracing-subscriber = {version = "0.3", features = ["parking_lot", "ansi"] }