[package]
name = "apiformes"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug = []
server_async = ["tokio", "tracing", "serde", "debug", "uuid"]
noise = ["snow", "tokio-util", "futures"]
default =[]

[dependencies]
bytes = "1"
bitflags = "1.3"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt", "parking_lot", "time"], optional = true, default-features = false}
tracing = {version = "0.1", optional = true}
serde = {version = "1", features = ["serde_derive"], optional=true}
uuid = { version = "0.8", features = ["v4"], default-features = false, optional=true}
snow = {version="0.8", optional=true}
tokio-util = {version = "0.6", features=["codec"], optional = true}
futures={version = "0.3", optional=true}
