[package]
name = "apiformes-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apiformes-server-lib = {path="../server-lib", features = ["noise"]}
tokio = {version = "1", features=["full"]}
tracing="0.1"
tracing-subscriber = {version = "0.3", features = ["parking_lot", "ansi", "env-filter"] }
